--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "firebase-scrypt"
+description = "Pure Rust implementation of Firebase's script password hashing algorithm"
+repository = "https://github.com/Techie-Pi/firebase-scrypt-rust"
+homepage = "https://github.com/Techie-Pi/firebase-scrypt-rust"
+documentation = "https://github.com/Techie-Pi/firebase-scrypt-rust"
+readme = "https://github.com/Techie-Pi/firebase-scrypt-rust#readme"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
 
 [dependencies]
 base64 = "0.13"
