chore: ready for publish (II)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Pure Rust implementation of Firebase's script password hashing al
 repository = "https://github.com/Techie-Pi/firebase-scrypt-rust"
 homepage = "https://github.com/Techie-Pi/firebase-scrypt-rust"
 documentation = "https://github.com/Techie-Pi/firebase-scrypt-rust"
-readme = "https://github.com/Techie-Pi/firebase-scrypt-rust#readme"
+readme = "README.md"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
